add script in index. add js and style files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
   </head>
   <body>
     <p>hello world</p>
-  <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <ul>
+      <li>s</li>
+      <li>i</li>
+      <li>d</li>
+      <li>e</li>
+      <li>n</li>
+      <li>a</li>
+      <li>v</li>
+    </ul>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
