--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>s i d e n a v</title>
-  <style type="text/css">
-
-  </style>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
-    <p>hello world</p>
+    <div id="home">
+    <p>Lorem Ipsum</p>
     <ul>
       <li>s</li>
       <li>i</li>
@@ -18,6 +17,13 @@
       <li>a</li>
       <li>v</li>
     </ul>
+    <button id="showNav">Open</button>
+    </div>
+  <div>
+    <h1>"A lonely Nav"</h1>
+    <h2>INFINITE CONTENT</h2>
+    <button id="hideNav">Hide</button>
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="main.js"></script>
   </body>
