add content in index

--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
   </head>
   <body>
     <div id="home">
-    <p>Lorem Ipsum</p>
+    <h1>Nav</h1>
     <ul>
-      <li>s</li>
-      <li>i</li>
-      <li>d</li>
+      <li>c</li>
+      <li>o</li>
+      <li>n</li>
+      <li>t</li>
       <li>e</li>
       <li>n</li>
-      <li>a</li>
-      <li>v</li>
+      <li>t</li>
     </ul>
-    <button id="showNav">Open</button>
+    <button id="showSidenav">Open</button>
     </div>
-  <div>
-    <h1>"A lonely Nav"</h1>
-    <h2>INFINITE CONTENT</h2>
-    <button id="hideNav">Hide</button>
+  <div id="sidenav" class="hide">
+    <h1>NinjaNav</h1>
+    <p>infinite content</p>
+    <button id="hideSidenav">Hide</button>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
