re style index.html. add css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="home">
-    <h1>Nav</h1>
+    <h1 id="title">Nav</h1>
     <ul>
       <li>c</li>
       <li>o</li>
@@ -20,9 +20,18 @@
     <button id="showSidenav">Open</button>
     </div>
   <div id="sidenav" class="hide">
-    <h1>NinjaNav</h1>
-    <p>infinite content</p>
-    <button id="hideSidenav">Hide</button>
+    <h1 id="title">NinjaNav</h1>
+    <ul>
+      <li>infinite content</li>
+      <li>c</li>
+      <li>o</li>
+      <li>n</li>
+      <li>t</li>
+      <li>e</li>
+      <li>n</li>
+      <li>t</li>
+    </ul>
+    <button id="hideSidenav">Close</button>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/main.js"></script>
